# IDP-MDP

./: .gitignore  README.md  pyproject.toml  requirement txt
pipeline/: add_chemical_shift.py  compute_all_backmapping.py  compute_all_properties.py  split_and_create_dataset.py
scripts/: check_PED_weights.py  compute_all_properties.py  compute_test_full_atoms.py  download_ped.py  download_uniprot_features.py  how_many_multimodal.py  mini_test.py  old_test_chemical_shift.py  old_test_chemical_shift_spartap.py  read.py  test_chemical_shift_legolas.py  test_ensemble_analysis_IDRome.py  test_ensemble_analysis_PED.py
src/idpmdp/: backmapping.py  protein_analyzer.py  utils.py
src/idpmdp/analysis/: global_metrics.py  io_utils.py  matrix_metrics.py  orchestrator.py  residue_level_metrics.py
src/idpmdp/dataset_creator/: split_and_create_datasets.py  unified_dataset.py
src/idpmdp/downloader/: ped_downloader.py
tests/: test_protein_analyzer.py  utils.py
tests/test_protein_analyser/: test_dummy_data.py  test_real_data.py
visualize/: global_viz.py  per_prot_viz.py
