[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/idpmdp"]

[project]
name = "idpmdp"
version = "0.1.0"
description = "Analysis tools for calculating Molecular Dynamics Properties of Intrinsically Disordered Proteins (IDPs)."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "CC BY-NC-4.0"}
authors = [
    {name = "Nicolas Buton", email = "nicolas.buton@inria.fr"}
]
classifiers = [
    "License :: Free for non-commercial use",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3.14",
]


# Core dependencies required for the package to function
dependencies = [
    "MDAnalysis>=2.0.0",
    "mdtraj>=1.9.0",
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "pandas>=1.3.0",
]

[project.urls]
"Homepage" = "https://github.com/nbuton/IDP-MDP"
"Documentation" = "https://idp-mdp.readthedocs.io/"
"Bug Tracker" = "https://github.com/nbuton/IDP-MDP/issues"

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.pytest.ini_options]
testpaths = ["tests"]